# rust-os

./: .gitignore  Cargo.toml  README.md  x86_64-os.json
bootloader/: Cargo.toml
bootloader/src/os/x86/: initialize.asm  startup-x86_64.asm  vesa.inc
bootloader/src/os/x86_64/: initialize.asm  memory_map.asm
src/: main.rs  vga_buffer.rs
