[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"

# the profile used for `cargo build`
[profile.dev]
# use x86_64-os panic-strategy field
#panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
# use x86_64-os panic-strategy field
#panic = "abort" # disable stack unwinding on panic

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]